# sylph-verifier

./: .env  .gitignore  Cargo.toml  README.md  Slyph-Verifier.db  build.rs  output.txt  place-template.rbxl
migrations/2017-11-19-025136_init/: down.sql  up.sql
migrations/2017-12-07-094923_init_schema/: down.sql  up.sql
src/: boot.rs  database.rs  error_report.rs  errors.rs  logger.rs  lz4.rs  main.rs  place.rs  startup.rs  token.rs  util.rs
src/commands/: config.rs  management.rs  mod.rs  permissions.rs  util.rs  verifier.rs
src/core/: config.rs  database.rs  delete_service.rs  discord.rs  error_report.rs  logger.rs  mod.rs  permissions.rs  place.rs  roles.rs  setup_connection.sql  tasks.rs  terminal.rs  token.rs  verification_channel.rs  verifier.rs
src/core/database/: impls.rs
src/database/: impls.rs  mod.rs  version_0_to_1.sql  version_0_to_2.sql  version_1.sql  version_1_to_2.sql  version_2_to_3.sql
src/roblox/: api.rs  condition.rs  lz4.rs  mod.rs  place-template.rbxl  place.rs  rules.rs
