[package]
name = "sylph-verifier"
version = "0.1.0-dev"
authors = ["Lymia Aluysia <lymia@lymiahugs.com>"]
build = "build.rs"

[profile.release]
opt-level = 3
debug = 2
lto = true

[profile.bench]
opt-level = 3
lto = true

[features]
release = []

[dependencies]
backtrace = "0.3"
byteorder = "1.1"
chrono = "0.4"
constant_time_eq = "0.1"
enumset = { version = "0.3", features = ["nightly"] }
failure = { version = "1.0", git = "https://github.com/withoutboats/failure.git", features = ["backtrace"] }
fs2 = "0.4"
hmac = "0.6"
hyper = "0.10"
lazy_static = "1.0"
libc = "0.2"
linefeed = { version = "0.4", git = "https://github.com/Lymia/linefeed.git", branch = "concurrent-loggers" }
log = "0.4"
lz4-sys = "1.8"
num_cpus = "1.0"
parking_lot = { version = "0.5", features = ["nightly", "deadlock_detection"] }
percent-encoding = "1.0"
r2d2 = "0.8"
rand = "0.5"
regex = "1.0"
reqwest = "0.8"
rusqlite = { version = "0.13", features = ["bundled"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serenity = { version = "0.5", default-features = false, features = ["cache", "client", "model"] }
sha2 = "0.7"
threadpool = "1.0"
uuid = { version = "0.6", features = ["v5"] }

[build-dependencies]
git2 = "0.7"
rustc_version = "0.2"
