[package]
name = "sylph-verifier"
version = "0.1.0-dev"
authors = ["Lymia Aluysia <lymia@lymiahugs.com>"]
build = "build.rs"

[profile.release]
opt-level = 3
debug = 2
lto = true

[profile.bench]
opt-level = 3
lto = true

[features]
release = []

[patch.crates-io]
openssl = { git = "https://github.com/Lymia/rust-openssl", version = "0.9.24", branch = "0.9.x" }

[dependencies]
backtrace = "0.3"
byteorder = "1.1"
chrono = "0.4"
constant_time_eq = "0.1"
enumset = { version = "0.4", features = ["nightly"] }
failure = { version = "1.0", git = "https://github.com/withoutboats/failure.git", features = ["backtrace"] }
fs2 = "0.4"
hmac = "0.7"
hyper = "0.10"
lazy_static = "1.0"
libc = "0.2"
linefeed = "0.5"
log = "0.4"
lz4-sys = "1.8"
num_cpus = "1.0"
parking_lot = { version = "0.9", features = ["nightly", "deadlock_detection"] }
percent-encoding = "1.0"
rand = "0.5"
regex = "1.0"
reqwest = "0.9"
rusqlite = { version = "0.14", features = ["bundled"] }
scraper = "0.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.8"
threadpool = "1.0"
uuid = { version = "0.7", features = ["v5"] }

[dependencies.r2d2]
version = "0.8.5"
git = "https://github.com/sfackler/r2d2.git"
rev = "8d973d946bd94fb2054a7312e86668314432fb96"

[dependencies.serenity]
version = "0.5.9"
git = "https://github.com/Lymia/serenity.git"
rev = "c1166980628e9fd3ee9ee3d3093754a9b9511c03"
default-features = false
features = ["cache", "client", "model"]

[build-dependencies]
git2 = "0.10"
rustc_version = "0.2"
