[package]
name = "sylph-verifier"
version = "0.1.0-dev"
authors = ["Lymia Aluysia <lymia@lymiahugs.com>"]
build = "build.rs"

[profile.release]
opt-level = 3
debug = 1
lto = true

[profile.bench]
opt-level = 3
lto = true

[features]
release = []

[patch.crates-io]
openssl = { git = "https://github.com/Lymia/rust-openssl", version = "0.9.24", branch = "0.9.x" }

[dependencies]
backtrace = "0.3"
byteorder = "1.1"
chrono = "0.4"
constant_time_eq = "0.1"
enumset = "1.0"
failure = { version = "1.0", git = "https://github.com/withoutboats/failure.git", features = ["backtrace"] }
fs2 = "0.4"
hmac = "0.9"
hyper = "0.10"
lazy_static = "1.0"
libc = "0.2"
linefeed = "0.5"
log = "0.4"
lz4-sys = "1.8"
num_cpus = "1.0"
parking_lot = { version = "0.11", features = ["nightly", "deadlock_detection"] }
percent-encoding = "1.0"
rand = "0.7"
regex = "1.0"
reqwest = { version = "0.10", features = ["blocking"] }
rusqlite = { version = "0.23", features = ["bundled"] }
scraper = "0.12"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.9"
threadpool = "1.0"
uuid = { version = "0.8", features = ["v5"] }

[dependencies.r2d2]
version = "0.8.5"

[dependencies.serenity]
version = "0.5.9"
git = "https://github.com/Lymia/serenity.git"
rev = "bfc12d24d8b2dbac00edc93f5c4bb1a531b8cc7e"
default-features = false
features = ["cache", "client", "model"]

[build-dependencies]
git2 = "0.10"
rustc_version = "0.2"
